VDSEC-126 Fix Sonar warnings by improving code readability